infra/k8s/expiration-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration
  #specify how to create pods, match selector name with below
  template:
    metadata:
      labels:
        app: expiration
    spec:
      containers: 
        - name: expiration #this name can be anything and we will use this for logging purposes lets say
          image: asia.gcr.io/ticketing-316209/expiration
