infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  #specify how to create pods, match selector name with below
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers: 
        - name: auth #this name can be anything and we will use this for logging purposes lets say
          image: asia.gcr.io/ticketing-316209/auth
---
apiVersion: v1
kind: Service
metadata: 
  name: auth-srv
spec:
  selector:
    app: auth #specify which selector to match with. Write same name as above
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
