infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  #specify how to create pods, match selector name with below
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers: 
        - name: orders #this name can be anything and we will use this for logging purposes lets say
          image: asia.gcr.io/ticketing-316209/orders
---
apiVersion: v1
kind: Service
metadata: 
  name: orders-srv
spec:
  selector:
    app: orders #specify which selector to match with. Write same name as above
  ports:
    - name: orders
      protocol: TCP
      port: 3000
      targetPort: 3000
