infra/k8s/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  #specify how to create pods, match selector name with below
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers: 
        - name: payments #this name can be anything and we will use this for logging purposes lets say
          image: asia.gcr.io/ticketing-316209/payments
---
apiVersion: v1
kind: Service
metadata: 
  name: payments-srv
spec:
  selector:
    app: payments #specify which selector to match with. Write same name as above
  ports:
    - name: payments
      protocol: TCP
      port: 3000
      targetPort: 3000
